--- a/src/data/i18n/default/transifex_input.po
+++ b/src/data/i18n/default/transifex_input.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: @edx/studio-frontend 1.2.0\n"
+"Project-Id-Version: @edx/studio-frontend 1.3.0\n"
 "Report-Msgid-Bugs-To: edx/studio-frontend\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -8,8 +8,8 @@ msgstr ""
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "X-Generator: react-intl-gettext 5.1.1\n"
-"POT-Creation-Date: 2018-02-09T20:54:36.515Z\n"
-"PO-Revision-Date: 2018-02-09T20:54:36.515Z\n"
+"POT-Creation-Date: 2018-02-21T22:19:57.367Z\n"
+"PO-Revision-Date: 2018-02-21T22:19:57.367Z\n"
 "Language: en\n"
 
 #. Title for link to full accessiblity policy.
@@ -281,6 +281,48 @@ msgstr "Other"
 msgctxt "assetsFiltersSectionLabel"
 msgid "Filter by File Type"
 msgstr "Filter by File Type"
+
+#. Title for a message displayed when no results are found.
+# AssetsPage/displayMessages.json
+msgctxt "assetsPageNoResultsNumFiles"
+msgid "0 files"
+msgstr "0 files"
+
+#. Message displayed in table when no results are found.
+# AssetsPage/displayMessages.json
+msgctxt "assetsPageNoResultsMessage"
+msgid "No files were found."
+msgstr "No files were found."
+
+#. Label for a button that clears all of the filters applied on the table.
+# AssetsPage/displayMessages.json
+msgctxt "assetsPageNoResultsClear"
+msgid "Clear all filters"
+msgstr "Clear all filters"
+
+#. Title for a message displayed when a course has no files to display in the table.
+# AssetsPage/displayMessages.json
+msgctxt "assetsPageNoAssetsNumFiles"
+msgid "0 files in your course"
+msgstr "0 files in your course"
+
+#. Message displayed when a course has no files to display in the table.
+# AssetsPage/displayMessages.json
+msgctxt "assetsPageNoAssetsMessage"
+msgid "Enhance your course content by uploading files such as images and documents."
+msgstr "Enhance your course content by uploading files such as images and documents."
+
+#. Label for search input
+# AssetsSearch/displayMessages.json
+msgctxt "assetsSearchInputLabel"
+msgid "Search"
+msgstr "Search"
+
+#. Label for search submit button that has a magnifying glass icon
+# AssetsSearch/displayMessages.json
+msgctxt "assetsSearchSubmitLabel"
+msgid "Submit search"
+msgstr "Submit search"
 
 #. Label for column header
 # AssetsTable/displayMessages.json
