Change clear filters button display text

--- a/src/data/i18n/default/src/components/AssetsClearFiltersButton/displayMessages.json
+++ b/src/data/i18n/default/src/components/AssetsClearFiltersButton/displayMessages.json
@@ -2,6 +2,6 @@
   {
     "id": "assetsClearFiltersButtonLabel",
     "description": "Label for a button that clears all filters applied to a table.",
-    "defaultMessage": "View all files"
+    "defaultMessage": "Clear all filters"
   }
 ]
