--- a/src/data/i18n/default/transifex_input.po
+++ b/src/data/i18n/default/transifex_input.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: @edx/studio-frontend 1.3.0\n"
+"Project-Id-Version: @edx/studio-frontend 1.4.0\n"
 "Report-Msgid-Bugs-To: edx/studio-frontend\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -8,8 +8,8 @@ msgstr ""
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "X-Generator: react-intl-gettext 5.1.1\n"
-"POT-Creation-Date: 2018-02-26T17:17:31.396Z\n"
-"PO-Revision-Date: 2018-02-26T17:17:31.396Z\n"
+"POT-Creation-Date: 2018-03-01T17:30:39.294Z\n"
+"PO-Revision-Date: 2018-03-01T17:30:39.294Z\n"
 "Language: en\n"
 
 #. Title for link to full accessiblity policy.
@@ -321,14 +321,14 @@ msgstr "Enhance your course content by uploading files such as images and docume
 #. Message above a paginated table describing what subset of a filtered result set is currently visible.
 # AssetsResultsCount/displayMessages.json
 msgctxt "assetsResultsCountFiltered"
-msgid "Showing {start}-{end} out of {total} possible matches."
-msgstr "Showing {start}-{end} out of {total} possible matches."
+msgid "Showing {start}-{end} out of {wrappedTotal} {total, plural, one {possible match} other {possible matches}}."
+msgstr "Showing {start}-{end} out of {wrappedTotal} {total, plural, one {possible match} other {possible matches}}."
 
 #. Message above a paginated table of files describing what subset of all files is currently visible.
 # AssetsResultsCount/displayMessages.json
 msgctxt "assetsResultsCountTotal"
-msgid "Showing {start}-{end} out of {total} total files."
-msgstr "Showing {start}-{end} out of {total} total files."
+msgid "Showing {start}-{end} out of {wrappedTotal} {total, plural, one {total file} other {total files}}."
+msgstr "Showing {start}-{end} out of {wrappedTotal} {total, plural, one {total file} other {total files}}."
 
 #. Label for search input
 # AssetsSearch/displayMessages.json
